--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-
+PORT=8000
+ACCESS_TOKEN_SECRET=Mili123MysecretKey 
+SENDER_EMAIL_ADDRESS=patel.mili282@gmail.com
+EMAIL_PASSWORD=eglmwdfxzwplxkom
+cronBalanceTimings=30 19 * * *
+DATABASE= mongodb+srv://2303031267012:Manali%402802@cluster1.gizkt.mongodb.net/
